# aiopslab-applications

./: .gitmodules  README.md
flower/: README.md  compose.yml
flower/kubernetes/clientapp/: clientapp-1-deployment.yaml  clientapp-1-service.yaml  clientapp-2-deployment.yaml  clientapp-2-service.yaml
flower/kubernetes/serverapp/: serverapp-pod.yaml  serverapp-service.yaml
flower/kubernetes/superlink/: superlink-deployment.yaml  superlink-service.yaml
flower/kubernetes/supernode/: supernode-1-deployment.yaml  supernode-1-service.yaml  supernode-2-deployment.yaml  supernode-2-service.yaml
flower/train/: client_app.py  pyproject.toml  server_app.py  task.py
socialNetwork/docker/media-frontend/xenial/: Dockerfile.arm64
train-ticket/templates/: flagd-config.yaml  flagd-deployment.yaml
train-ticket/ts-cancel-service/: .project  Dockerfile  pom.xml
train-ticket/ts-cancel-service/src/main/java/cancel/: CancelApplication.java
train-ticket/ts-cancel-service/src/main/java/cancel/async/: AsyncTask.java
train-ticket/ts-cancel-service/src/main/java/cancel/service/: FeatureFlagService.java
train-ticket/ts-inside-payment-service/: .project  Dockerfile  pom.xml
train-ticket/ts-inside-payment-service/src/main/java/inside_payment/: InsidePaymentApplication.java
train-ticket/ts-inside-payment-service/src/main/java/inside_payment/service/: FeatureFlagService.java  InsidePaymentService.java
train-ticket/ts-order-service/: .project  Dockerfile  pom.xml
train-ticket/ts-order-service/src/main/java/order/: OrderApplication.java
(+2 files in other folders)
